# gov-changelog-action

./: .flake8  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  README.md  action.yml  changelog-config.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: first_action.yml  generate-changelog.yml
gov_changelog_action.egg-info/: SOURCES.txt  top_level.txt
gov_changelog_action/gov_changelog_action.egg-info/: PKG-INFO
gov_changelog_action/src/: create_changelog.py  get_github_data.py  manip_data.py  template.txt  update_release.py
gov_changelog_action/tests/manip_data_tests/: get_prefixes_testcase.json  test_check_commit_and_unreleased_error.py  test_get_prefixes.py  test_update_commits.py  test_update_release_prefixes.py  update_commits_testcase.json  update_release_prefixes_testcase.json
src/: create_changelog.py  get_github_data.py  manip_data.py  template.txt
