[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gov_changelog_action"
description = "Github action to auto generate a changelog"
requires-python = ">=3.6"

# `coverage` configurations
[tool.coverage.run]
source = [
    "./gov_changelog_action"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./gov_changelog_action/tests"
]
