[metadata]
name = gov_changelog_action
description = A package that creates/updates a changelog based on git commits
author = Joshua Lynch
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    gov_changelog_action
install_requires =
    PyGithub == 1.57
    PyYAML == 6.0
    tqdm == 4.64.1
    Jinja2 == 3.1.2
    pytest == 7.2.1
    semantic-version
python_requires = >=3.6
package_dir =
    =.
zip_safe = no
